# awesome-prompt-forge

./: README.md
python/: README.md  pyproject.toml
python/awesome_prompt_forge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/prompt_forge/: __init__.py  cli.py  index.json  loader.py
python/prompt_forge/prompts/chatgpt/: chatgpt-4o-image-safety-policies-5062025.md  gpt-builder.md  o4-mini-chatgpt-dot-com-5062024.md
python/prompt_forge/prompts/claude/: claude-3-32024.md  claude-3-5-sonnet-text-090924.md  claude-3-5-sonnet-text-image-090924.md
python/prompt_forge/prompts/copilot/: github-copilot-vs-22924.md
python/prompt_forge/prompts/general/: act-as-1950s-diner-photo-transformation.md  act-as-2026-size-neler-getirecek.md  act-as-3d-avatar-prompt.md  act-as-3d-cartoon-animation-baby-bunny-adventure.md  act-as-3d-character-render-in-high-end-disney-pixar-style.md  act-as-3d-fps-game.md  act-as-3d-mechanical-part-image-to-technical-drawing-conversion.md  act-as-3d-space-explorer.md  act-as-5x2-reverse-construction-process-villa-demolition-storyboard.md  act-as-7v7-football-team-generator-app.md  act-as-a-relaxed-copper-haired-woman-resting-sideways-on-a-bed-in-a-soft-low-lig.md  act-as-a-wrinkle-in-time.md  act-as-a-young-woman-relaxing-in-a-wicker-chair-on-a-sunlit-mediterranean-balcon.md  act-as-academic-paper-figure-generator-nano-banana-pro.md  act-as-academic-powerpoint-presentation-designer.md  act-as-academic-research-writer.md  act-as-academic-text-refinement-assistant.md  act-as-academic-writing-workshop-plan.md  act-as-accessibility-auditor.md  (+582 more)
(+1289 files in other folders)
